repository url for javabin.repo was not correct (missing release)

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<repository>
 			<id>javabin.repo</id>
 			<name>javaBin Smia</name>
-			<url>http://smia.java.no/maven/repo/</url>
+			<url>http://smia.java.no/maven/repo/release</url>
 		</repository>
 	</repositories>
 
